--- a/Dockerfile-navigator
+++ b/Dockerfile-navigator
@@ -8,10 +8,8 @@ FROM digitalasset/daml-sdk:${sdk_vsn}
 
 WORKDIR /home/daml
 
-COPY ui-backend.conf frontend-config.js /home/daml/
+COPY --chown=daml ui-backend.conf frontend-config.js /home/daml/
 
-USER root
-RUN chown daml ui-backend.conf frontend-config.js
 USER daml
 
 EXPOSE 7500
