--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,7 @@ jobs:
       - run:
           command: |
             export PATH=${HOME}/.daml/bin:${PATH}
-            mvn verify
+            mvn verify -Dit.test='!*PublishingIT'
       - save_cache:
           paths:
             - ~/.m2
