--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ executors:
   mvn-executor:
     docker:
       - image: circleci/openjdk:11.0-jdk
+    resource_class: large
   daml-executor:
     docker:
       - image: circleci/openjdk:11.0-jdk
