--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,7 +92,7 @@ jobs:
       - run:
           command: |
             export PATH=${HOME}/.daml/bin:${PATH}
-            mvn verify -Dit.test='!*PublishingIT'
+            mvn verify
       - save_cache:
           paths:
             - ~/.m2
