ERA-720 Storing integration test results as well in CircleCI.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,6 +102,10 @@ jobs:
           path: target/surefire-reports
       - store_artifacts:
           path: target/surefire-reports
+      - store_test_results:
+          path: target/failsafe-reports
+      - store_artifacts:
+          path: target/failsafe-reports
       - run:
           command: |
             mkdir logs
