--- a/Dockerfile-bots
+++ b/Dockerfile-bots
@@ -11,4 +11,4 @@ VOLUME /home/sdk/data
 COPY target/market-data-service-docker.jar market-data-service-docker.jar
 COPY target/lib/* /home/sdk/lib/
 
-ENTRYPOINT java -jar market-data-service-docker.jar -s ${SANDBOX_HOST} -p ${SANDBOX_PORT}
+ENTRYPOINT java -jar market-data-service-docker.jar -jsonHost ${JSON_HOST} -jsonPort ${JSON_PORT} -ledgerId market-data-service
