--- a/Dockerfile-sandbox
+++ b/Dockerfile-sandbox
@@ -14,4 +14,4 @@ USER daml
 
 EXPOSE 6865
 
-CMD ~/.daml/bin/daml sandbox -- --wall-clock-time --address 0.0.0.0 --port 6865 market-data-service.dar
+CMD ~/.daml/bin/daml sandbox -- --wall-clock-time --address 0.0.0.0 --port 6865 market-data-service.dar --ledgerid market-data-service
