--- a/Dockerfile-json
+++ b/Dockerfile-json
@@ -15,4 +15,8 @@ USER daml
 EXPOSE 7575
 
 ENTRYPOINT ~/scripts/waitForSandbox.sh ${SANDBOX_HOST} ${SANDBOX_PORT} && \
-           ~/.daml/bin/daml json-api --ledger-host ${SANDBOX_HOST} --ledger-port ${SANDBOX_PORT} --http-port 7575
+           ~/.daml/bin/daml json-api \
+            --ledger-host ${SANDBOX_HOST} \
+            --ledger-port ${SANDBOX_PORT} \
+            --http-port 7575 \
+            --address 0.0.0.0
