Upgrade project to latest SDK (#58)

--- a/Dockerfile-json
+++ b/Dockerfile-json
@@ -2,15 +2,21 @@
 # Copyright (c) 2019, Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
 #
 
-ARG sdk_vsn=0.13.55
+ARG sdk_vsn=1.0.0
 
 FROM digitalasset/daml-sdk:${sdk_vsn}
 
 WORKDIR /home/daml
 
+COPY --chown=daml scripts/ /home/daml/scripts/
+
 USER daml
 
 EXPOSE 7575
 
-# sleep 5 to wait for sandbox, to avoid abort
-ENTRYPOINT sleep 5 && ~/.daml/bin/daml json-api --ledger-host ${SANDBOX_HOST} --ledger-port ${SANDBOX_PORT} --http-port 7575
+ENTRYPOINT ~/scripts/waitForSandbox.sh ${SANDBOX_HOST} ${SANDBOX_PORT} && \
+           ~/.daml/bin/daml json-api \
+            --ledger-host ${SANDBOX_HOST} \
+            --ledger-port ${SANDBOX_PORT} \
+            --http-port 7575 \
+            --address 0.0.0.0
