--- a/Dockerfile-triggers
+++ b/Dockerfile-triggers
@@ -2,7 +2,7 @@
 # Copyright (c) 2019, Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
 #
 
-ARG sdk_vsn=0.13.55
+ARG sdk_vsn=1.0.0
 
 FROM digitalasset/daml-sdk:${sdk_vsn}
 
@@ -13,4 +13,5 @@ COPY --chown=daml scripts/ /home/daml/scripts/
 
 USER daml
 
-CMD ~/scripts/startTriggers.sh "${SANDBOX_HOST}" "${SANDBOX_PORT}"
+CMD ~/scripts/waitForSandbox.sh ${SANDBOX_HOST} ${SANDBOX_PORT} && \
+    ~/scripts/startTriggers.sh "${SANDBOX_HOST}" "${SANDBOX_PORT}"
