--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <daml-sdk.version>100.13.55</daml-sdk.version>
-        <daml-plugin.version>0.1</daml-plugin.version>
+        <daml-sdk.version>1.0.0</daml-sdk.version>
+        <daml-plugin.version>0.1.4</daml-plugin.version>
         <slf4j.version>1.7.26</slf4j.version>
         <logback.version>1.2.3</logback.version>
         <junit.version>4.12</junit.version>
@@ -30,14 +30,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.daml.ledger</groupId>
+            <groupId>com.daml</groupId>
             <artifactId>bindings-rxjava</artifactId>
             <version>${daml-sdk.version}</version>
             <!-- Cannot remove as test library needs as provided dependency. Reduced scoped. -->
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.daml.ledger</groupId>
+            <groupId>com.daml</groupId>
             <artifactId>bindings-java</artifactId>
             <version>${daml-sdk.version}</version>
         </dependency>
@@ -54,7 +54,7 @@
         <dependency>
             <groupId>com.digitalasset</groupId>
             <artifactId>functest-java_2.12</artifactId>
-            <version>0.1.16</version>
+            <version>0.1.17</version>
         </dependency>
         <dependency>
             <groupId>args4j</groupId>
