--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
             <version>0.10.7</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.10.4</version>
+        </dependency>
     </dependencies>
 
     <build>
