--- a/Dockerfile-navigator
+++ b/Dockerfile-navigator
@@ -2,7 +2,7 @@
 # Copyright (c) 2019, Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
 #
 
-ARG sdk_vsn=1.5.0-snapshot.20200907.5151.0.eb68e680
+ARG sdk_vsn=1.5.0
 
 FROM digitalasset/daml-sdk:${sdk_vsn}
 
