--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,33 +5,122 @@
 
 version: 2.1
 
+orbs:
+  slack: circleci/slack@3.4.2
+
 executors:
-  mvn-executor:
-    docker:
-      - image: circleci/openjdk:11.0-jdk
-    resource_class: large
   daml-executor:
     docker:
-      - image: circleci/openjdk:11.0-jdk
+      - image: cimg/openjdk:11.0-node
+  mvn-executor:
+    docker:
+      - image: cimg/openjdk:11.0
+    resource_class: large
 
 commands:
   install_sdk:
-    description: "Install the DAML SDK"
+    description: "Install Daml SDK"
     parameters:
       version:
         type: string
     steps:
       - run:
+          name: Install Daml SDK
           command: |
-            cd ${HOME}
-            wget https://github.com/digital-asset/daml/releases/download/v<< parameters.version >>/daml-sdk-<< parameters.version >>-linux.tar.gz
-            tar -zxvf daml-sdk-<< parameters.version >>-linux.tar.gz
-            cd sdk-<< parameters.version >>
-            ./install.sh
-            cd ${HOME}
-            rm -rf sdk-<< parameters.version >>
+            curl -sSL https://get.daml.com/ | sh /dev/stdin << parameters.version >>
+            # idea from https://circleci.com/docs/2.0/env-vars/
+            >> $BASH_ENV echo 'export PATH="$HOME/.daml/bin:$PATH"'
+  slack_notification:
+    description: "Notify about failure on Slack"
+    steps:
+      - slack/status:
+          fail_only: true
+          only_for_branches: master
+          webhook: '${SLACK_WEBHOOK}'
 
 jobs:
+  daml_test:
+    parameters:
+      daml_sdk_version:
+        type: string
+    executor: daml-executor
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - daml-{{ checksum "daml.yaml" }}
+      - install_sdk:
+          version: << parameters.daml_sdk_version >>
+      - run:
+          name: Build Daml
+          command: |
+            make build-dars
+      - run:
+          name: Daml tests
+          command: |
+            make test-dars
+      - save_cache:
+          paths:
+            - ~/.daml
+          key: daml-{{ checksum "daml.yaml" }}
+      - store_test_results:
+          path: target/daml-test-reports
+      - store_artifacts:
+          path: target/daml-test-reports
+      - slack_notification
+
+  integration_test:
+    parameters:
+      daml_sdk_version:
+        type: string
+    executor: mvn-executor
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - m2-{{ checksum "pom.xml" }}-{{ checksum "daml.yaml" }}
+            - m2
+      - install_sdk:
+          version: << parameters.daml_sdk_version >>
+      - run:
+          name: Integration tests
+          command: |
+            mvn verify
+      - run:
+          command: |
+            echo "Moving log files so they can be stored."
+            mkdir -p logs
+            mv *.log logs
+          when: always
+      - store_artifacts:
+          path: logs
+      - save_cache:
+          paths:
+            - ~/.m2
+            - ~/.daml
+          key: m2-{{ checksum "pom.xml" }}-{{ checksum "daml.yaml" }}
+      - store_test_results:
+          path: target/failsafe-reports
+      - store_artifacts:
+          path: target/failsafe-reports
+      - store_test_results:
+          path: target/surefire-reports
+      - store_artifacts:
+          path: target/surefire-reports
+      - run:
+          command: |
+            mkdir -p logs
+            mv target/pmd.xml logs
+          when: always
+      - persist_to_workspace:
+          root: target
+          paths:
+            - "*.jar"
+            - "*.dar"
+            - "lib"
+            - "NOTICE"
+      - slack_notification
+
   blackduck_check:
     parameters:
       daml_sdk_version:
@@ -51,99 +140,50 @@ jobs:
             - ~/.daml
           key: m2-{{ checksum "pom.xml" }}-{{ checksum "daml.yaml" }}
       - run:
-          name: Maven Build
+          name: Maven build
           command: |
-            export PATH=${HOME}/.daml/bin:${PATH}
             mvn clean package
       - run:
-          name: Run Blackduck Detect
+          name: Blackduck detect
           command: |
-            bash <(curl -s https://raw.githubusercontent.com/DACH-NY/security-blackduck/master/synopsys-detect) ci-build digitalasset_ex_market_data_service master --logging.level.com.synopsys.integration=DEBUG --detect.notices.report=true --detect.report.timeout=480
+            bash <(curl -s https://raw.githubusercontent.com/DACH-NY/security-blackduck/master/synopsys-detect) \
+            ci-build digitalasset_ex_market_data_service master \
+            --logging.level.com.synopsys.integration=DEBUG \
+            --detect.notices.report=true \
+            --detect.report.timeout=480
       - run:
           command: cp digitalasset_ex_market_data_service_master_Black_Duck_Notices_Report.txt NOTICE
       - persist_to_workspace:
-          root: .
-          paths:
-            - "NOTICE"
-
-  mvn_test:
-    parameters:
-      daml_sdk_version:
-        type: string
-    executor: mvn-executor
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - m2-{{ checksum "pom.xml" }}-{{ checksum "daml.yaml" }}
-            - m2
-      - install_sdk:
-          version: << parameters.daml_sdk_version >>
-      - run:
-          command: |
-            export PATH=${HOME}/.daml/bin:${PATH}
-            mvn verify
-      - save_cache:
-          paths:
-            - ~/.m2
-            - ~/.daml
-          key: m2-{{ checksum "pom.xml" }}-{{ checksum "daml.yaml" }}
-      - store_test_results:
-          path: target/surefire-reports
-      - store_artifacts:
-          path: target/surefire-reports
-      - store_test_results:
-          path: target/failsafe-reports
-      - store_artifacts:
-          path: target/failsafe-reports
-      - run:
-          command: |
-            mkdir logs
-            mv *.log logs
-      - store_artifacts:
-          path: logs
-      - persist_to_workspace:
           root: target
           paths:
-            - "*.jar"
-            - "*.dar"
-            - "lib"
             - "NOTICE"
-
-  daml_test:
-    parameters:
-      daml_sdk_version:
-        type: string
-    executor: daml-executor
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - daml-{{ checksum "daml.yaml" }}
-      - install_sdk:
-          version: << parameters.daml_sdk_version >>
-      - run:
-          command: |
-            export PATH=${HOME}/.daml/bin:${PATH}
-            daml build -o target/market-data-service.dar
-            daml test --junit target/daml-test-reports/daml-test.xml
-      - save_cache:
-          paths:
-            - ~/.daml
-          key: daml-{{ checksum "daml.yaml" }}
-      - store_test_results:
-          path: target/daml-test-reports
-      - store_artifacts:
-          path: target/daml-test-reports
+      - slack_notification
 
 workflows:
   version: 2
-  build_and_test:
+  test:
     jobs:
       - daml_test:
           daml_sdk_version: "1.9.0"
-      - mvn_test:
+          context: refapps
+      - integration_test:
           daml_sdk_version: "1.9.0"
+          context: refapps
+  scheduled_test:
+    triggers:
+      - schedule:
+          cron: "0 1 * * *"
+          filters:
+            branches:
+              only:
+                - master
+    jobs:
+      - daml_test:
+          daml_sdk_version: "1.9.0"
+          context: refapps
+      - integration_test:
+          daml_sdk_version: "1.9.0"
+          context: refapps
       - blackduck_check:
           daml_sdk_version: "1.9.0"
           context: blackduck
