fix circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,12 +9,6 @@ orbs:
   slack: circleci/slack@3.4.2
 
 executors:
-  daml-executor:
-    parameters:
-      version:
-        type: string
-    docker:
-      - image: digitalasset/daml-sdk:<< parameters.version >>
   mvn-executor:
     docker:
       - image: cimg/openjdk:11.0
@@ -46,8 +40,8 @@ jobs:
     parameters:
       daml_sdk_version:
         type: string
-    executor: daml-executor
-      - version: << parameters.daml_sdk_version >>
+    docker:
+      - image: digitalasset/daml-sdk:<< parameters.daml_sdk_version >>
     steps:
       - checkout
       - restore_cache:
