--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ orbs:
 executors:
   daml-executor:
     docker:
-      - image: cimg/openjdk:11.0
+      - image: cimg/openjdk:11.0-node
   mvn-executor:
     docker:
       - image: cimg/openjdk:11.0
