--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,7 +143,9 @@ jobs:
             --detect.notices.report=true \
             --detect.report.timeout=480
       - run:
-          command: cp digitalasset_ex_market_data_service_master_Black_Duck_Notices_Report.txt NOTICE
+          command: |
+            cp digitalasset_ex_market_data_service_master_Black_Duck_Notices_Report.txt NOTICE
+            mkdir -p target
       - persist_to_workspace:
           root: target
           paths:
