--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,11 +143,9 @@ jobs:
             --detect.notices.report=true \
             --detect.report.timeout=480
       - run:
-          command: |
-            cp digitalasset_ex_market_data_service_master_Black_Duck_Notices_Report.txt NOTICE
-            mkdir -p target
+          command: cp digitalasset_ex_market_data_service_master_Black_Duck_Notices_Report.txt NOTICE
       - persist_to_workspace:
-          root: target
+          root: .
           paths:
             - "NOTICE"
       - slack_notification
