--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,7 +141,7 @@ jobs:
             ci-build digitalasset_ex_market_data_service master \
             --logging.level.com.synopsys.integration=DEBUG \
             --detect.notices.report=true \
-            --detect.report.timeout=480
+            --detect.report.timeout=1800
       - run:
           command: cp digitalasset_ex_market_data_service_master_Black_Duck_Notices_Report.txt NOTICE
       - persist_to_workspace:
@@ -163,7 +163,9 @@ workflows:
   scheduled_test:
     triggers:
       - schedule:
-          cron: "0 1 * * *"
+          # need to scatter jobs to reduce Blackduck load
+          # see also https://digitalasset.atlassian.net/browse/ERA-913
+          cron: "0 4 * * *"
           filters:
             branches:
               only:
