--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,7 +141,7 @@ jobs:
             ci-build digitalasset_ex_market_data_service master \
             --logging.level.com.synopsys.integration=DEBUG \
             --detect.notices.report=true \
-            --detect.report.timeout=1800
+            --detect.timeout=3600
       - run:
           command: cp digitalasset_ex_market_data_service_master_Black_Duck_Notices_Report.txt NOTICE
       - persist_to_workspace:
