--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -138,12 +138,12 @@ jobs:
           name: Blackduck detect
           command: |
             bash <(curl -s https://raw.githubusercontent.com/DACH-NY/security-blackduck/master/synopsys-detect) \
-            ci-build digitalasset_ex_market_data_service master \
+            ci-build digitalasset_ex_market_data_service main \
             --logging.level.com.synopsys.integration=DEBUG \
             --detect.notices.report=true \
             --detect.timeout=3600
       - run:
-          command: cp digitalasset_ex_market_data_service_master_Black_Duck_Notices_Report.txt NOTICE
+          command: cp digitalasset_ex_market_data_service_main_Black_Duck_Notices_Report.txt NOTICE
       - persist_to_workspace:
           root: .
           paths:
