--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,10 +155,10 @@ workflows:
   test:
     jobs:
       - daml_test:
-          daml_sdk_version: "1.12.0-snapshot.20210317.6528.0.493e2154"
+          daml_sdk_version: "1.12.0"
           context: refapps
       - integration_test:
-          daml_sdk_version: "1.12.0-snapshot.20210317.6528.0.493e2154"
+          daml_sdk_version: "1.12.0"
           context: refapps
   scheduled_test:
     triggers:
@@ -172,13 +172,13 @@ workflows:
                 - master
     jobs:
       - daml_test:
-          daml_sdk_version: "1.12.0-snapshot.20210317.6528.0.493e2154"
+          daml_sdk_version: "1.12.0"
           context: refapps
       - integration_test:
-          daml_sdk_version: "1.12.0-snapshot.20210317.6528.0.493e2154"
+          daml_sdk_version: "1.12.0"
           context: refapps
       - blackduck_check:
-          daml_sdk_version: "1.12.0-snapshot.20210317.6528.0.493e2154"
+          daml_sdk_version: "1.12.0"
           context:
             - blackduck
             - refapps
