--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <daml-sdk.version>1.10.0</daml-sdk.version>
+        <daml-sdk.version>1.12.0</daml-sdk.version>
         <daml-plugin.version>0.1.4</daml-plugin.version>
         <slf4j.version>1.7.26</slf4j.version>
         <logback.version>1.2.3</logback.version>
@@ -177,7 +177,7 @@
                         <exclude>**/*.hi</exclude>
                         <exclude>**/*.hie</exclude>
                         <exclude>**/*.log</exclude>
-                        <exclude>**/.daml/package-database/**/*.*</exclude>
+                        <exclude>**/.daml/**/*.*</exclude>
                     </excludes>
                     <mapping>
                         <daml>DOUBLEDASHES_STYLE</daml>
