--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <daml-sdk.version>1.12.0</daml-sdk.version>
-        <daml-plugin.version>0.1.4</daml-plugin.version>
+        <daml-plugin.version>0.1.5</daml-plugin.version>
         <slf4j.version>1.7.26</slf4j.version>
         <logback.version>1.2.3</logback.version>
         <junit.version>4.12</junit.version>
@@ -130,7 +130,7 @@
                 </executions>
 	    </plugin>
             <plugin>
-                <groupId>com.digitalasset</groupId>
+                <groupId>com.daml.extensions</groupId>
                 <artifactId>daml-maven-plugin</artifactId>
                 <version>${daml-plugin.version}</version>
                 <executions>
