--- a/pom.xml
+++ b/pom.xml
@@ -52,9 +52,10 @@
             <version>${logback.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.digitalasset</groupId>
-            <artifactId>functest-java_2.12</artifactId>
-            <version>0.1.19</version>
+            <groupId>com.daml.extensions</groupId>
+            <artifactId>junit4-support_2.12</artifactId>
+            <version>0.1.21</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>args4j</groupId>
