--- a/pom.xml
+++ b/pom.xml
@@ -178,7 +178,7 @@
                         <exclude>**/*.hi</exclude>
                         <exclude>**/*.hie</exclude>
                         <exclude>**/*.log</exclude>
-                        <exclude>**/.daml/**/*.*</exclude>
+                        <exclude>**/.daml/**</exclude>
                     </excludes>
                     <mapping>
                         <daml>DOUBLEDASHES_STYLE</daml>
