--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,6 +149,7 @@ jobs:
             bash <(curl -s https://raw.githubusercontent.com/DACH-NY/security-blackduck/master/synopsys-detect) \
             ci-build digitalasset_ex_market_data_service main \
             --logging.level.com.synopsys.integration=DEBUG \
+            --detect.excluded.detector.types=pip \
             --detect.notices.report=true \
             --detect.timeout=3600
       - run:
