--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -132,6 +132,12 @@ jobs:
           keys:
             - m2-{{ checksum "pom.xml" }}-{{ checksum "daml.yaml" }}
             - m2
+      - run:
+          name: Install pipenv
+          command: |
+            sudo apt-get update || sudo apt-get update
+            sudo apt-get install python3-pip
+            pip3 install pipenv
       - install_sdk:
           version: << parameters.daml_sdk_version >>
       - save_cache:
@@ -149,7 +155,8 @@ jobs:
             bash <(curl -s https://raw.githubusercontent.com/DACH-NY/security-blackduck/master/synopsys-detect) \
             ci-build digitalasset_ex_market_data_service main \
             --logging.level.com.synopsys.integration=DEBUG \
-            --detect.excluded.detector.types=pip \
+            --detect.python.path="$(which python3)" \
+            --detect.pipenv.path="$(which pipenv)" \
             --detect.notices.report=true \
             --detect.timeout=3600
       - run:
@@ -170,6 +177,15 @@ workflows:
       - integration_test:
           daml_sdk_version: "1.13.0"
           context: refapps
+      - blackduck_check:
+          daml_sdk_version: "1.13.0"
+          filters:
+            branches:
+              only:
+                - /.*blackduck.*/
+          context:
+            - blackduck
+            - refapps
   scheduled_test:
     triggers:
       - schedule:
