--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,26 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <executable>pipenv</executable>
+                    <workingDirectory>scripts</workingDirectory>
+                    <arguments>
+                        <argument>sync</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
