--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,19 @@ commands:
             curl -sSL https://get.daml.com/ | sh /dev/stdin << parameters.version >>
             # idea from https://circleci.com/docs/2.0/env-vars/
             >> $BASH_ENV echo 'export PATH="$HOME/.daml/bin:$PATH"'
+  install_python_dependencies:
+    description: "Install Python Dependencies"
+    steps:
+      - run:
+          name: Install pipenv
+          command: |
+            sudo apt-get update || sudo apt-get update
+            sudo apt-get install python3-pip
+            pip3 install pipenv
+      - run:
+          name: Install flake8
+          command: |
+            pip3 install flake8
   slack_notification:
     description: "Notify about failure on Slack"
     steps:
@@ -137,12 +150,7 @@ jobs:
           keys:
             - m2-{{ checksum "pom.xml" }}-{{ checksum "daml.yaml" }}
             - m2
-      - run:
-          name: Install pipenv
-          command: |
-            sudo apt-get update || sudo apt-get update
-            sudo apt-get install python3-pip
-            pip3 install pipenv
+      - install_python_dependencies:
       - install_sdk:
           version: << parameters.daml_sdk_version >>
       - save_cache:
