fix circleCI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,11 +86,7 @@ jobs:
             - m2
       - install_sdk:
           version: << parameters.daml_sdk_version >>
-      - run:
-          name: Install flake8
-          command: |
-            sudo apt-get update || sudo apt-get update
-            sudo apt-get install flake8
+      - install_python_dependencies
       - run:
           name: Python flake8
           command: |
