--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,6 +97,11 @@ jobs:
           command: |
             pipenv check
       - run:
+          name: Pipenv sync to install dependencies
+          working_directory: scripts
+          command: |
+            pipenv sync
+      - run:
           name: Integration tests
           command: |
             mvn verify
